--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,14 +5,15 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>å
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
-        <item name="android:background">@color/colorBackground</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="AuthTheme" parent="AppTheme">
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AuthTheme" parent="AppTheme.NoActionBar">
         <item name="android:statusBarColor">@color/colorPrimary</item>
     </style>
 
@@ -35,7 +36,7 @@
         <item name="android:textColor">@color/colorError</item>
     </style>
 
-    <style name="AppTheme.BottomNavigationView" parent="Widget.Design.BottomNavigationView">
-        <item name="colorPrimary">@color/colorAccent</item>
-    </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
